# CRESP

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cli.md  install.ps1  install.sh  mkdocs.yml  pyproject.toml  rustfmt.toml
.github/workflows/: release.yml  rust.yml
cresp/: __init__.py
cresp/core/: __init__.py  config.py  constants.py  exceptions.py  hashing.py  models.py  seed.py  utils.py  workflow.py
cresp/core/validation/: __init__.py  standard.py  strict.py  tolerant.py
cresp/core/workflow/: __init__.py  execution.py  progress.py  stage.py  utils.py  validation.py  visualization.py  workflow.py
docs/: index.md
examples/mnist/: .gitignore  cresp.yaml  mnist_cresp.py  pixi.toml  reproduction_report.md
src/: error.rs  main.rs
src/commands/: completion.rs  diff.rs  export.rs  init.rs  mod.rs  new.rs  reproduce.rs  update.rs  validate.rs  verify.rs  version.rs
src/commands/new/: config.rs  mod.rs  system_info.rs  utils.rs
src/commands/new/templates/: conda_utils.rs  cresp_config.rs  matlab.rs  mod.rs  python.rs  r.rs
src/config/: mod.rs
src/core/: mod.rs
src/utils/: cli_ui.rs  mod.rs  validation.rs
