[package]
name = "cresp"
version = "0.1.0"
edition = "2021"
authors = ["Wisup AI Team <team@wisup.ai>"]
description = "CRESP (Computational Research Environment Standardization Protocol) CLI tool"
license = "MIT"
repository = "https://github.com/wisup-ai/cresp"
readme = "README.md"
keywords = ["research", "reproducibility", "environment", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22.24"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
indicatif = "0.17"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
walkdir = "2.3"
tempfile = "3.8"
which = "6.0"
semver = "1.0"
directories = "5.0"
config = "0.13"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3" 