[project]
authors = [{ name = "Jing-Yilin", email = "yilin.jing.ai@outlook.com" }]
name = "cresp"
version = "0.1.0"
requires-python = ">= 3.12"
description = "Computational Research Environment Standardization Protocol"
license = { text = "MIT" }
readme = "README.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
pyyaml = ">=6.0.2,<7"
click = ">=8.1.8,<9"
rich = ">=14.0.0,<15"
numpy = ">=2.2.4,<3"
pandas = ">=2.2.3,<3"
matplotlib = ">=3.10.1,<4"
pydantic = ">=2.11.3,<3"
jinja2 = ">=3.1.6,<4"


[tool.pixi.pypi-dependencies]
cresp = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3.5,<9"
pytest-cov = ">=6.1.1,<7"
pytest-mock = ">=3.14.0,<4"
ruff = ">=0.11.5,<0.12"
mypy = ">=1.15.0,<2"
pre-commit = ">=4.2.0,<5"

[tool.pixi.feature.dev.tasks]
test = "pytest"
lint = "ruff check"
format = "ruff format"
typecheck = "mypy"

[tool.pixi.feature.doc.dependencies]
mkdocs = ">=1.6.1,<2"
mkdocs-material = ">=9.6.12,<10"

[tool.pixi.feature.doc.tasks]
docs = "mkdocs build"
serve = "mkdocs serve"

[tool.pixi.environments]
dev = ["dev", "doc"]

[tool.ruff]
select = ["E", "F", "I", "N", "W", "B", "UP"]
line-length = 100
